# example-cxx-cmake

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cliff.toml  compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  release.yml
tests/: CMakeLists.txt
